# price-action-trader

./: .dockerignore  .env.example  .gitignore  Dockerfile  fetch_historical.py  main.py  pyproject.toml
.github/workflows/: deploy.yml
backtest/: engine.py  metrics.py  positions.py
config/: settings.py
data/: cache.py  fetcher.py  universe.py
docs/superpowers/plans/: 2026-03-28-price-action-trader.md
docs/superpowers/specs/: 2026-03-28-price-action-trader-design.md
optimization/: exit_strategies.py  grid_search.py  risk_models.py  walk_forward.py
reporting/: charts.py  results.py
scripts/: setup_gcp.sh
strategies/: base.py  candlestick_patterns.py  fair_value_gaps.py  market_structure.py  order_blocks.py  support_resistance.py
tests/: test_alpaca_client.py  test_cache.py  test_candlestick_patterns.py  test_cli.py  test_engine.py  test_exit_strategies.py  test_fair_value_gaps.py  test_fetcher.py  test_grid_search.py  test_integration.py  test_market_structure.py  test_metrics.py  test_order_blocks.py  test_paper_trading_integration.py  test_position_manager.py  test_positions.py  test_results.py  test_risk_models.py  test_scanner.py  test_settings.py  test_support_resistance.py  test_trading_config.py  test_universe.py  test_walk_forward.py
trading/: alpaca_client.py  config.py  position_manager.py  runner.py  scanner.py  symbols.py
